--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
-    "name":"public-data-transform-repo",
-    "version":"1.0.0"
+    "dependencies": {
+        "@dataform/core": "3.0.0"
+    }
 }
